[gd_scene load_steps=3 format=3 uid="uid://b6tamcdmb4rjc"]

[ext_resource type="Script" path="res://scripts/ui/EndDayButton.gd" id="1_endday"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_endday"]
bg_color = Color(0.176471, 0.313726, 0.0862745, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.101961, 0.188235, 0.0352941, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="EndDayButton" type="Button"]
offset_left = 1600.0
offset_top = 1000.0
offset_right = 1850.0
offset_bottom = 1060.0
theme_override_styles/normal = SubResource("StyleBoxFlat_endday")
theme_override_font_sizes/font_size = 24
text = "ðŸŒ™ END DAY"
script = ExtResource("1_endday")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
